cambios añadimos texto

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola Mundo</title>
 </head>
 <body>
-    <p>Hola qué tal</p>
+    <p>Hola qué tal, estoy probando GitHub por primera vez</p>
 </body>
 </html>
